test/conformance/chainsaw/cli/two-results/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test
spec:
  steps:
  - name: two-results
    try:
    - script:
        content: kubectl kyverno test .
        check:
          ($error != null): true
          ($stderr): "Error: failed to run test (The policy named preconditi\\ons cannot be found.\nThe policy named precondition cannot be found.\nThe rule any-ule cannot be found in the policy named precondition.\nThe rule any-rle cannot be found in the policy named preconditi\\ons.\n)"
