test/conformance/chainsaw/cli/two-results/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: precondition # incorrect name
  resources:
  - test-invalid
  result: fail
  rule: any-ule # incorrect name
- kind: Pod
  policy: preconditiions # incorrect name
  resources:
  - test-valid
  result: pass
  rule: any-rle # incorrect name
